<resources>
    <string name="app_name">GameVault</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail">Correo:</string>
    <string name="password">Contraseña:</string>
    <string name="repeatPassword">Confirmar contraseña:</string>
    <string name="restorePassword">Olvidé mi contraseña</string>
    <string name="signIn">Ingresar</string>
    <string name="register">¿No tienes cuenta? Regístrate</string>
    <string name="backToSignIn">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="username">Nombre de usuario</string>
    <string name="phone">Teléfono</string>
    <string name="birthDate">Fecha de nacimiento</string>
    <string name="save">Guardar</string>
    <string name="regresar">Regresar</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nete_y_empieza_a_explorar_miles_de_juegos">Únete y empieza a explorar miles de juegos</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">¿Ya tienes cuenta? Inicia sesión</string>
</resources>